[package]
name = "walrus"
authors = ["Sullivan Bognar"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
thiserror = "1.0.37"
log = "0.4.17"
simplelog = "0.12.0"
git-version = "0.3.5"
lalrpop-util = { version= "0.19.8", features = ["lexer"] }
regex = "1"
line-span = "0.1.3"
get-size = { version = "0.1.1", features = ["derive"] }
snailquote = "0.3.1"