[package]
name = "walrus"
authors = ["Sullivan Bognar"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[profile.release]
debug = true

[features]
dhat-heap = []

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
thiserror = "1.0.37"
log = "0.4.17"
simplelog = "0.12.0"
git-version = "0.3.5"
lalrpop-util = { version= "0.19.8", features = ["lexer"] }
regex = "1.7.1"
line-span = "0.1.3"
snailquote = "0.3.1"
float-ord = "0.3.2"
uuid = { version = "1.2.2", features = ["v4"] }
itertools = "0.10.5"
slotmap = "1.0.6"
once_cell = "1.17.0"
mimalloc = { version = "0.1.34", default-features = false }
dhat = "0.3.2"
rustc-hash = "1.1.0"
string-interner = "0.14.0"